fixed video position on mobiles

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
 #box {
 	margin-top: 40px;
 	max-width: 1200px;
-	max-height: 960px;
 }
 
 h1 {
@@ -30,11 +29,10 @@ p {
 	margin-top: 80px;
 	margin-left: 60px;
 	font-family: Calibri;
-	font-size: 19px;
+	font-size: 20px;
 	font-weight: light;
 }
 
 #tunes {
 	margin-top: 75px;
 }
-
